<resources>
    <string name="app_name">Intelligent</string>
    <string name="action_settings">Settings</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="press_again_to_quit_app">Press Again To Quit App</string>
    <string name="row">Row</string>
    <string name="number">Number</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="baud_rate">Baud rate</string>
    <string name="open">Open</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="register">Register</string>
    <string name="the_seat_is_registered">The seat is registered</string>
    <string name="nobody">Nobody</string>

</resources>
