<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay"
    app:elevation="0dp">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimaryDark"
        android:weightSum="1" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/row"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:backgroundTint="#ffffff"
            android:popupBackground="#ffffff"
            android:dropDownWidth="100dp"/>

        <EditText
            android:id="@+id/et_row"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/number"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp" />

        <EditText
            android:id="@+id/et_num"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/spinner_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:backgroundTint="#ffffff"
            android:popupBackground="#ffffff"
            android:dropDownWidth="100dp"/>
        <TextView
            android:id="@+id/tv_queding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="36px"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp" />

    </android.support.v7.widget.Toolbar>

</android.support.design.widget.AppBarLayout>
