<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shemh.intelligent.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="#2F92C9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Welcome"
            android:textColor="#ffffff"
            android:textSize="48sp"
            android:textStyle="italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_corner_frame"
            android:padding="10dp"
            android:layout_marginTop="80dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/account"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparency"
                android:hint="@string/account"
                android:textColorHint="#666666"
                android:textColor="#333333"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_corner_frame"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparency"
                android:hint="@string/password"
                android:textColorHint="#666666"
                android:textColor="#333333"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#2F92C9"
            android:textSize="21sp"
            android:background="@drawable/shape_corner_white"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

    <com.shemh.intelligent.view.loadingView.LoadingIndicatorView
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorName="LineSpinFadeLoaderIndicator"
        style="@style/LoadingIndicatorView"
        android:visibility="gone"
        app:indicatorColor="#ffffff"
        android:layout_centerInParent="true"/>

</RelativeLayout>
